# jet_engine_brayton_cycle_analysis_and_sim

./: .gitattributes  .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
.streamlit/: config.toml
configs/: default.py
docs/: architecture.md  design-direction.md  roadmap.md
matlab/: EngineSim.m  README.md  main.m
models/: atmosphere.py  gas.py
performance/: efficiency.py  metrics.py  reporting.py  sizing.py  thrust.py
solver/: __init__.py  base.py  cycle.py  engine.py  helpers.py  maps.py
solver/stages/: afterburner.py  combustor.py  compressor.py  inlet.py  nozzle.py  turbine.py
tests/: test_architecture.py  test_solver.py  test_visualization.py
ui/: app.py
visualization/: diagrams.py  flow.py  plots.py
