[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jet-engine-brayton-sim"
version = "0.1.0"
description = "Student-focused Brayton cycle engine simulator with turbojet and turbofan modes."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "streamlit",
  "plotly",
  "numpy",
  "pandas",
  "kaleido",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.8",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
